# SK-mROCK

./: .gitignore  .gitmodules  ARGS_LIST.md  CMakeLists.txt  README.md
include/: Autodiff.h  ChebyshevMethods.h  ClassicalDSdeRungeKuttaIntegrators.h  ClassicalOdeRungeKuttaIntegrators.h  DSde.h  DSdeProblems.h  DSdeRungeKuttaIntegrator.h  MainHeader.h  MatrixReplacement.h  MonteCarlo.h  MultirateDSdeProblems.h  MultirateOdeRungeKuttaIntegrator.h  Ode.h  OdeProblems.h  OdeRungeKuttaIntegrator.h  Parameters.h  Parareal.h  StabilizedDSdeRungeKuttaIntegrators.h  StabilizedOdeRungeKuttaIntegrators.h  StochasticIntegrals.h  TimeIntegrator.h
matlab/: Plot_BrownianMotion.m  Plot_DiffusionRefinedMesh.m  Plot_FastSlowMolecules.m  Plot_HodgkinHuxley_Parareal.m  Plot_ManyDiffusionTerms.m  Plot_NeuronCable_Parareal.m  Plot_ODEIonicModel.m  Plot_OneDimHodgkinHuxley_Parareal.asv  Plot_OneDimHodgkinHuxley_Parareal.m  Plot_PDEBrusselator.m  Plot_PopulationDynamics.m  Plot_RadiationDiffusion.m  Plot_RadiationDiffusion_parareal.m  Plot_ScalarNonStiffNonLinearTest_Parareal.m  Plot_StochasticBrusselator.m  Plot_StochasticNeuronCable.m  Plot_StochasticReactionDIffusion.m  Plot_uBidomain.m  plot_MonoDomain_1D_eigenvalues.m  plot_MonoDomain_1D_eigenvalues_parareal.asv  plot_MonoDomain_1D_parareal.m  plot_MonoDomain_in_1D.asv
matlab/ODECellByCell/: CV_vs_dt.csv  CV_vs_dt_vs_dx.csv  CV_vs_dt_vs_dx_notloglog.csv  CV_vs_dx.csv  CVd_flat_randomly_deactivated.csv  CVl_flat_randomly_deactivated.csv  CVt_flat_randomly_deactivated.csv  ODECellByCell_CV.m  ODECellbyCell_plot_V_for_diff_kappa.m  Plot_ODECellByCellModel.asv  Plot_ODECellByCellModel.m  ProcessData_ODECellByCellModel_CVl_VS_cells_size.m  ProcessData_ODECellByCellModel_CVltd_randomly_deactivated_gj.m  ProcessData_ODECellByCellModel_CVt.m  ProcessData_ODECellByCellModel_CVt_VS_gj_pos_random.asv  ProcessData_ODECellByCellModel_CVt_VS_gj_pos_random.m  ProcessData_ODECellByCellModel_Rl.m  ProcessData_ODECellByCellModel_Rt.m  ProcessData_ODECellByCellModel_amp.m  ProcessData_ODECellByCellModel_dt_dx.m  ProcessData_ODECellByCellModel_freq.m  ProcessData_ODECellByCellModel_si.m  flat_CVd_stats.csv  flat_CVl_stats.csv  flat_CVt_stats.csv  get_CV.m  plot_ODECellByCell_domains.m  plot_ODECellByCell_gap_junctions.m
matlab/ODECellByCell/flat/: center_length.csv  side_alt_length.csv  side_alt_p.csv  side_length.csv
src/: CMakeLists.txt  ChebyshevMethods.cpp  ClassicalDSdeRungeKuttaIntegrators.cpp  ClassicalOdeRungeKuttaIntegrators.cpp  DSde.cpp  DSdeProblems.cpp  DSdeRungeKuttaIntegrator.cpp  MonteCarlo.cpp  MultirateDSdeProblems.cpp  MultirateOdeRungeKuttaIntegrator.cpp  Ode.cpp  OdeProblems.cpp  OdeProblemsAutodiffRhs.cpp  OdeRungeKuttaIntegrator.cpp  Parameters.cpp  Parareal.cpp  StabilizedDSdeRungeKuttaIntegrators.cpp  StabilizedOdeRungeKuttaIntegrators.cpp  StochasticIntegrals.cpp  TimeIntegrator.cpp  main.cpp
